--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,8 @@
     "store.custom#about-us": {
         "blocks": [
             "flex-layout.row#about-us",
-            "tab-layout#home"
+            "tab-layout#home",
+            "iframe"
         ]
     },
     "tab-layout#home": {
@@ -58,7 +59,7 @@
     "tab-list.item#home2": {
         "props": {
             "tabId": "electronics",
-            "label": "Electronics"
+            "label": "Instagram"
         }
     },
     "tab-content#home": {
@@ -77,7 +78,7 @@
     },
     "tab-content.item#home2": {
         "children": [
-            "rich-text#home2"
+            "iframe"
         ],
         "props": {
             "tabId": "electronics"
@@ -95,6 +96,13 @@
             "text": "Texto para Electronics",
             "textPosition": "CENTER",
             "font": "t-heading-3"
+        }
+    },
+    "iframe": {
+        "props": {
+            "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
+            "width": 800,
+            "height": 1000
         }
     }
 }
