--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -8,7 +8,7 @@
     "image#landingbanner": {
         "props": {
             "src": "https://s2.glbimg.com/oZTqK89Q0xclYQA4cDp6uHdQfxg=/0x0:1280x836/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/M/A/OmfSPoSIyFAktvlPX7BQ/cod-warzone.jpg",
-            "minWidth": 100
+            "minWidth": "100%"
         }
     },
     "search-result-layout.customQuery": {
